[package]
name = "jsonbin"
version = "0.1.0"
description = "Client for jsonbin.org API"
keywords = [ "jsonbin", "api", "json", "rest" ]
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/filalex77/jsonbin-rs"
edition = "2018"

[dependencies]
isahc = { version = "0.8.2", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
thiserror = "1.0.11"
